# nexus.os

./: .aider.chat.history.md  .aider.input.history  .claudeignore  .dockerignore  .env.example  .gcloudignore  .gitignore  AUDIT_REPORT.md  CI_CD_README.md  CLI.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  NEXUS_OS_V6.md  NexusOS.command  OPENCLAW_FEATURES.md  PRODUCT_OVERVIEW.md  README.md  README_VERCEL.md  SOVEREIGN_ARCHITECTURE.md  agentManager.ts  brain.py  bridge_config.yaml  build_gold_master.sh  cloudbuild.yaml  commit_output.txt  debug-os.sh  deepseek_coder.py  deploy-brain.sh  docker-compose.test.yml  docker-compose.yml  fix_ci.js  fix_ci2.js  fix_quotes.js  gemma.txt  koyeb.yaml  launch-api.sh  main.py  master_bridge.py  (+14 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
.idx/: dev.nix
Code/: main.py  nerve.py  ui.py  verify_openrouter.js
Code/brain/: memory.py  planner.py  router.py
Code/brain/agents/: __init__.py  (+3 more)
Code/executor/: actions.py  dispatcher.py  gui_engine.py  memory.py  memory_store.py  schema.py  session.py  skills.py  state_manager.py
agents/: __init__.py  dev_agent.py  life_agent.py  sys_agent.py
apps/api/: .env.example  Dockerfile  Dockerfile.production  debug-router.ts  debug.js  package.json  test-result.txt  test-router.ts  tsc_errors.txt  tsconfig.json  vitest.config.ts
apps/browser-extension/: background.js  manifest.json
apps/extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
apps/web/: .env.example  .env.local.example  .eslintrc.json  Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vercel.json
brain/: __init__.py  memory.py  planner.py  router.py
docker/: nginx.conf
docs/: architecture.md  db-schema.sql  deployment.md  openclaw-adaptation.md  skill-runtime.md  typescript-onboarding.md
executor/: __init__.py  dispatcher.py  safety.py
executor/actions/: __init__.py  app_launcher.py  file_manager.py  git_manager.py  skill_packs.py
migrations/: 001_initial_schema.sql  003_billing.sql  004_security_policies.sql  005_add_credits_function.sql
nexus-os/: sexy.md
scratch/: startup.sh  test_llm.ts
scripts/: build-desktop.sh  deploy-nexus.sh  deploy_cloud.sh  doctor.sh  local-check.sh  package-mac.sh  portal.sh  prepare_build.sh  turbo-launch.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: nexus-api-x86_64-apple-darwin
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/nexus-api/: Cargo.toml
src-tauri/nexus-api/src/: main.rs
src-tauri/src/: ai_service.rs  commands.rs  execution_engine.rs  gui_engine.rs  main.rs  mcp_client.rs  memory.rs  router.rs
supabase/migrations/: 007_saved_agents.sql
work/: .env.example  .gitignore  README.md  package.json  render.yaml  vercel.json
work/src-tauri/: tauri.conf.json
(+726 files in other folders)
