[package]
name = "nexus-os"
version = "2.7.0"
description = "The OS Layer for Artificial Intelligence"
authors = ["Nexus OS Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "shell-sidecar", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when a dev server is not used, 
# tauri-build will automatically enable this feature for you in those cases.
custom-protocol = ["tauri/custom-protocol"]
